<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/jogging_improve_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/jogging_on_your_marks"
        android:layout_centerHorizontal="true"
        android:text="@string/jogging_improve_time"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/jogging_on_your_marks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/jogging_get_set"
        android:layout_centerHorizontal="true"
        android:text="@string/jogging_on_your_marks"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/jogging_get_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/jogging_go"
        android:layout_centerHorizontal="true"
        android:text="@string/jogging_get_set"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/jogging_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/jogging_go"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/jogging_kilometers_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/jogging_button_cancel"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/jogging_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/jogging_button_cancel"
        android:visibility="invisible" />

</RelativeLayout>