<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--<fragment-->
            <!--android:id="@+id/fragment_jogging"-->
            <!--android:name="com.carles.jogging.jogging.JoggingFragment"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->

    <!--</FrameLayout>-->

    <TextView
        android:id="@+id/txt_jogging_improve_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!-- countdown texts -->
    <TextView
        android:id="@+id/txt_jogging_on_your_marks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_jogging_get_set"
        android:layout_centerHorizontal="true"
        android:text="@string/jogging_on_your_marks"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txt_jogging_get_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_jogging_go"
        android:layout_centerHorizontal="true"
        android:text="@string/jogging_get_set"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txt_jogging_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/jogging_go"
        android:visibility="invisible" />

    <!-- partial results that will be updated periodically -->
    <TextView
        android:id="@+id/txt_jogging_kilometers_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_jogging_time"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txt_jogging_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <!-- cancel run button in the bottom -->
    <Button
        android:id="@+id/btn_jogging_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/jogging_button_cancel"
        android:visibility="invisible" />

</RelativeLayout>
