<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.carles.jogging.main.MainActivity$PlaceholderFragment">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_above="@+id/txt_app_name"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_small"
        android:padding="@dimen/padding"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_running_girl" />

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_above="@+id/lyt_main_kms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/text_login_title"
        android:layout_marginBottom="@dimen/margin_big"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/lyt_main_kms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:weightSum="2">

        <TextView
            android:id="@+id/txt_main_kms"
            android:gravity="right"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingBottom="4dp"
            style="@style/spinner_label"
            android:text="@string/main_text_run" />

        <Spinner
            android:id="@+id/sp_main_kms"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/spinner"
            android:entries="@array/main_entries_kms" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_main_run"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        style="@style/button"
        android:text="@string/main_button_run" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>

</RelativeLayout>
